--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  position: relative;
+  min-height: 100vh;
 }
+
+.app::before {
+  content: '';
+  background: url(./image/weather.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.inp-field {
+  text-align: center;
+  padding: 1rem;
+}
+
+.inp-field input {
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 15px;
+  border: 1px solid rgb(18, 133, 228);
+  background: rgba(255, 255, 255, 0.5);
+  color: #8f8f8f;
+}
+
+.container {
+  margin-top: 10vh;
+}
+
+.city p {
+  text-align: center;
+  font-style: normal;
+  font-size: 3rem;
+}
+
+.temp h1 {
+  text-align: center;
+  font-size: 5rem;
+}
+
+.desc p {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.footer {
+  margin: 30vh auto;
+  padding: 2vh 0;
+  background:  rgb(170, 210, 244);
+  border-radius: 20px;
+  max-width: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+ }
+
+ .feels p, .humidity p, .wind p {
+  text-align: center;
+  font-size: 1.2rem;
+ }
